<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.start.StartFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <Button
        android:id="@+id/tap_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tap_me_text"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/save_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/change_password" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/change_password_text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_input_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textSize="20sp"


        app:layout_constraintEnd_toEndOf="@+id/password_text_view"
        app:layout_constraintStart_toStartOf="@+id/password_text_view"
        app:layout_constraintTop_toBottomOf="@+id/password_text_view"
        tools:text="*****" />

    <TextView
        android:id="@+id/confirm_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/password_input_text_view"
        app:layout_constraintStart_toStartOf="@+id/password_input_text_view"
        app:layout_constraintTop_toBottomOf="@+id/password_input_text_view" />

    <TextView
        android:id="@+id/confirm_password_input_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="@+id/confirm_password_text_view"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_text_view"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_text_view"
        tools:text="*****" />

    <Button
        android:id="@+id/show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_text"
        app:layout_constraintBottom_toTopOf="@+id/tap_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>